--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,15 @@ a {
     position: relative;
 }
 
+#banner-part .canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
 #banner-part img {
     position: absolute;
     bottom: 0;
@@ -114,7 +123,7 @@ a {
     position: relative;
 }
 
-#banner-part .overlay h3 {
+#banner-part .overlay #typed h3 {
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
     color: #f1f1f2;
@@ -132,9 +141,6 @@ a {
 
 }
 
-#banner-part .overlay span {
-    color: white;
-}
 
 #banner-part .overlay h4 {
     font-family: 'Poppins', sans-serif;
@@ -183,7 +189,7 @@ a {
     padding-bottom: 60px;
 
     background: url(../images/dream-bg.png) no-repeat right;
-   
+
 }
 
 #about-part .img {
@@ -378,4 +384,68 @@ a {
     font-weight: 400;
     color: dimgrey;
     text-align: center;
+}
+
+
+#typed-string {
+    font-size: 2em;
+    font-family: 'Poppins', sans-serif;
+
+    color: bisque;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#typed-string::after {
+    content: '|';
+    display: inline;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+    color: dimgrey;
+    font-weight: 100;
+
+
+}
+
+@keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes blink {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
